--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
     <link rel="stylesheet" type="text/CSS" href="style.css">
-    <style>
-       /*  body {
-            background-color: rgb(240, 240, 245);
-        } */
-    </style>
+    
 </head>
-    <body>
+<body>
+    <div>
+        <h1 class="apresentacao">Olá eu sou Tiago Trelles, seja muito bem vindo</h1>
+        <div class="image-container">       
+            <img src="Imagem/AVIP9457.JPG" alt="tomando chimmarrao" id="minha-foto">
+            <p class="descricao">
+                <em>
+                - Business administrator, with passion for tech.<br>
+                - Experienced in financial admin and CS.<br>
+                - Skillful with languages and solving problems<br>
+                - I’m passionate about teamwork and professional challenges.</em>
+            </p>
+        </div> 
+    </div><br>
+        <a href="https://www.linkedin.com/in/tiagotrelles/" target="_blank">Meu linkedin</a>
 
-        <h1>Olá eu sou Tiago Trelles, seja muito bem vindo</h1>
-
-        <img src="Imagem/AVIP9457.JPG" alt="" width="300px">
-        <p>
-            What is Lorem Ipsum?
-            <strong>Lorem Ipsum</strong> <em>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</em> 
-        </p>
-            <a href="https://www.linkedin.com/in/tiagotrelles/" target="_blank">Meu linkedin</a>
-
-        <h2>Habilidades</h2>
-            <ul>
-                <li>JavaScript</li>
-                <li>CSS</li>
-                <li>HTML</li>
-                <li><strong>Comprometimento</strong></li>
-            </ul>
+    <h2>Habilidades</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li><strong>Comprometimento</strong></li>
+        </ul>
         
 
-    </body>
+</body>
 </html>
